--- a/index.html
+++ b/index.html
@@ -2,4 +2,11 @@
     <head>
         <title>PHP Track</title>
     </head>
+    <body>
+        <h1>PHP Track</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis tempore doloribus adipisci. 
+            Voluptas eum nesciunt, animi, dignissimos tenetur architecto, et illo voluptatem a 
+            voluptatum eveniet quibusdam error accusantium iusto praesentium?
+        </p>
+    </body>
 </html>
