--- a/index.html
+++ b/index.html
@@ -2,4 +2,12 @@
     <head>
         <title>PHP Track</title>
     </head>
+    <body>
+        <form method='GET'>
+            <label>Firstname:
+                <br>
+                <input typ='text'>
+                <input type='submit'>
+        </form>    
+   </body>
 </html>
